# nosql-buddy

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  audit-stack.env.example  docker-compose.audit-db.yml  docker-compose.audit.yml  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.githooks/: pre-push
.github/: RELEASE.md
.github/workflows/: docker-publish.yml  release.yml
.impeccable/live/: config.json
audit-service/: Cargo.toml  Dockerfile.audit
audit-service/src/: error.rs  lib.rs
audit-service/src/audit/: attestation.rs  change_stream.rs  crypto.rs  dev_proxy.rs  dev_setup.rs  e2e_test.rs  epoch.rs  interceptor.rs  ipfs.rs  mod.rs  oplog.rs  oplog_canon.rs  oplog_integration.rs  oplog_omission.rs  pinata.rs  reader.rs  sled_store.rs  stellar.rs  stellar_native.rs  stellar_rpc.rs  verification_store.rs
audit-service/src/auditd/: attester.rs  mod.rs  publisher.rs  reader.rs
deploy/: audit-stack.env.attester.example  audit-stack.env.example  audit-stack.env.publisher.example  docker-compose.audit.yml
mongo-uri/: Cargo.toml
mongo-uri/src/: lib.rs
scripts/: mongo-entrypoint.sh  mongo-keyfile  oplog-completeness-demo.sh  rs-init-audit.js  rs-init.js  seed.js  setup-release-secrets.sh
src/: App.tsx  dev-logviewer-preview.tsx  main.tsx  styles.css  theme.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: smoke.rs
src-tauri/icons/: icon.icns
src-tauri/resources/circuits/: audited_action.r1cs  audited_action.wasm  merkle_inclusion.r1cs  merkle_inclusion.wasm
src-tauri/src/: error.rs  events.rs  lib.rs  state.rs
src-tauri/src/audit/: attestation.rs  audit_mode.rs  change_stream.rs  commands.rs  dev_stack.rs  e2e_test.rs  epoch.rs  interceptor.rs  ipfs.rs  mod.rs  oplog.rs  reader.rs  sled_store.rs  stellar.rs  stellar_rpc.rs
src-tauri/src/auditd/: attester.rs  mod.rs  publisher.rs  reader.rs
src-tauri/src/commands/: connections.rs  data.rs  data_model.rs  driver_code.rs  dump.rs  export.rs  import.rs  jobs.rs  mod.rs  mongo.rs  restore.rs  rollback.rs  settings.rs  shell.rs  sql.rs  system.rs  timeline.rs
src-tauri/src/mongo/: bson_json.rs  client_registry.rs  credentials.rs  data_model.rs  job_store.rs  mod.rs  operation_recorder.rs  profiles.rs  query_code.rs  redaction.rs  relationship.rs  safe_change.rs  scheduler.rs  schema.rs  shape.rs  shell.rs  shell_autocomplete.rs  sql_to_mongo.rs  timeline_store.rs  types.rs  vqb.rs
src-tauri/src/mongo/import_export/: bson_sink.rs  bson_source.rs  collection_sink.rs  core.rs  csv.rs  csv_source.rs  io_util.rs  json.rs  json_source.rs  mapping.rs  mod.rs  placeholders.rs  source_cursor.rs  source_mem.rs
src-tauri/tests/: integration.rs  ipc_wire_shape.rs  replica_set_write.rs
src/components/: AboutScreen.tsx  Alert.tsx  AuditBatchHistory.tsx  AuditChangeFeed.test.tsx  AuditChangeFeed.tsx  AuditDevFlow.tsx  AuditHeader.tsx  AuditInvestigation.tsx  AuditLiveView.tsx  AuditLiveViewV2.tsx  AuditModeChooser.tsx  AuditOnboarding.tsx  AuditPanel.tsx  AuditProductionFlow.tsx  AuditSettings.tsx  AuditStatusSection.tsx  AuditSurface.tsx  AuditUi.tsx  AuditorMode.tsx  AutocompleteTextarea.tsx  CodeEditor.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ConnectingView.tsx  ConnectionForm.tsx  ConnectionOverview.test.tsx  ConnectionOverview.tsx  DriverCodePanel.tsx  EditableCell.tsx  ErrorBoundary.tsx  ExplainTree.tsx  HighlightedTextarea.tsx  Icons.tsx  InfoPopover.tsx  InsertDocumentModal.test.tsx  InsertDocumentModal.tsx  LogViewer.tsx  MerklePathViz.tsx  Modal.tsx  OverviewCharts.test.tsx  (+17 more)
src/context/: ToastContext.tsx
src/features/: AggregationEditor.tsx  IndexTab.tsx  QueryTab.tsx  SchemaTab.tsx  ShellTab.tsx  VisualQueryBuilder.tsx  queryHistory.test.ts  queryHistory.ts
src/features/backupRestore/: CollectionCheckList.tsx  CollectionMappingTable.tsx  DumpWizard.tsx  RestoreWizard.tsx  SchedulePanel.tsx
src/features/dataModel/: CollectionNodeView.tsx  DataModelInspector.tsx  DataModelTab.tsx  DiagramCanvas.tsx  InfoPopover.tsx  RelationshipEdgeView.tsx  ShapeTreeView.tsx  dataModel.css  exportGraph.ts  layoutGraph.ts  lookupSignals.test.ts  lookupSignals.ts
src/features/importExport/: ExportWizard.tsx  FieldMappingTable.tsx  ImportWizard.tsx  importExportTasks.ts  placeholders.test.ts  placeholders.ts
src/features/jobs/: EditScheduleModal.tsx  JobListItem.tsx  JobLogViewer.tsx  JobsHub.tsx  index.ts  useJobStore.ts
src/features/timeline/: TimelinePanel.tsx  timeline.css
src/hooks/: useAppUpdater.ts  useCollectionSchema.ts
src/ipc/: commands.test.ts  commands.ts  events.ts  timeline.test.ts  timeline.ts
src/lib/: autocomplete.test.ts  autocomplete.ts  jsonLint.test.ts  jsonLint.ts  shellCompletion.test.ts  shellCompletion.ts  shellHistory.test.ts  shellHistory.ts  shortcutUtils.test.ts  shortcutUtils.ts  shortcuts.test.ts  shortcuts.ts
tests/: app.spec.ts
zk-audit/: Cargo.toml
zk-audit/examples/: gen_disclosure_fixture.rs  gen_proof.rs
zk-audit/soroban-contract/: Cargo.toml  INTERFACE.md
zk-audit/soroban-contract/fixtures/: disclosure_fixture.json
zk-audit/soroban-contract/src/: lib.rs  test.rs
zk-audit/src/: commitment.rs  disclosure.rs  error.rs  lib.rs  merkle.rs  prover.rs  serialize.rs
zk-spike/circuits/: audited_action.circom  merkle_inclusion.circom  multiplier2.circom  package.json  poseidon_t3.circom
zk-spike/poseidon-check/: Cargo.toml
zk-spike/poseidon-check/src/: main.rs  merkle_witness.rs
zk-spike/rust-prover/: Cargo.toml
zk-spike/rust-prover/src/: main.rs
zk-spike/scripts/: gen_invoke_args.py
zk-spike/verifier-contract/: Cargo.toml
zk-spike/verifier-contract/src/: lib.rs  test.rs
