[package]
name = "nosql-buddy"
version = "0.1.0"
description = "NoSQLBuddy: a cross-platform MongoDB management studio"
edition = "2021"
rust-version = "1.77"
default-run = "nosql-buddy"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
mongodb = { version = "3", default-features = false, features = ["rustls-tls", "compat-3-0-0"] }
bson = { version = "2", features = ["chrono-0_4", "uuid-1"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "vendored"] }
dirs = "5"
regex = "1"
boa_engine = "0.21"

# ZK audit log (local path dependency)
zk-audit = { path = "../zk-audit" }
ark-bn254 = "0.5"
ark-ff = "0.5"
sha2 = "0.10"
hex = "0.4"
sled = "0.34.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# Standalone audit daemon (nosqlbuddy-auditd)
axum = { version = "0.7", features = ["json"] }
tower = "0.5"

[[bin]]
name = "nosqlbuddy-auditd"
path = "src/bin/nosqlbuddy-auditd.rs"

[features]
# This feature is used for production builds where `devUrl` is not used.
custom-protocol = ["tauri/custom-protocol"]
