[package]
name = "nosql-buddy"
version = "0.1.0"
description = "NoSQLBuddy: a cross-platform MongoDB management studio"
edition = "2021"
rust-version = "1.77"
default-run = "nosql-buddy"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
mongodb = { version = "3", default-features = false, features = ["rustls-tls", "compat-3-0-0", "aws-auth"] }
bson = { version = "2", features = ["chrono-0_4", "uuid-1"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
csv = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "vendored"] }
dirs = "5"
regex = "1"
boa_engine = "0.21"
flate2 = "1"
zstd = "0.13"
cron = "0.15"
sqlparser = "0.62"

# Audit service (extracted standalone crate)
audit-service = { package = "nosqlbuddy-audit-service", path = "../audit-service" }

# Canonical MongoDB connection-string normalization (shared, single source of truth).
mongo-uri = { path = "../mongo-uri" }

# ZK audit log — used directly by audit/commands.rs for proof generation
zk-audit = { path = "../zk-audit" }
ark-ff = "0.5"
hex = "0.4"

[features]
# This feature is used for production builds where `devUrl` is not used.
custom-protocol = ["tauri/custom-protocol"]
