[package]
name = "zk-audit-commitment"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.89.0"
description = "Soroban commitment contract for ZK-AuditDB: Merkle root log + Groth16 verification"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
soroban-sdk = { version = "=25.1.0" }

[dev-dependencies]
soroban-sdk = { version = "=25.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
