[package]
name = "bn254-groth16-verifier"
version = "0.0.0"
edition = "2021"
publish = false
rust-version = "1.89.0"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
soroban-sdk = { version = "=25.1.0" }

[dev-dependencies]
soroban-sdk = { version = "=25.1.0", features = ["testutils"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ark-bn254 = "0.5"
ark-serialize = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
